--- a/Android/.classpath
+++ b/Android/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry kind="lib" path="/usr/lib/httpcomponents-client-4.0.1/lib/httpclient-4.0.1.jar"/>
+	<classpathentry kind="lib" path="/usr/lib/httpcomponents-client-4.0.1/lib/httpcore-4.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
